# Rust

./: .gitignore  CODE_VERIFICATION_REPORT.md  CRITICAL_BUGS.md  Cargo.toml  GUI_GUIDE.md  INSTALL.md  INSTALLATION_VERSIONS.md  PULL_REQUEST_DESCRIPTION.md  README.md  ROADMAP.md  ROADMAP_STATUS.md  SAM3_README.md  SAM3_SUMMARY.md  da3_complete.py  da3_gui.py  fbx_depth_export.py  flame_export.py  install.sh  install_rocky_rtx4090.sh  install_sam3.sh  install_sam3_da3.sh  install_ultimate_roto.sh  matanyone_wrapper.py  matte_anything.py  pyproject.toml  requirements.txt  roadmap  roto.py  rotoscope_gui.py  sam3_complete.py  sam3_gui.py  setup_dev.sh  setup_rotoscopy.sh  test_installation.py  test_sam3_structure.py  ultimate_gui.py  ultimate_roto.py  ultimate_roto_gui.py
Depth-Anything-3-main/src/: __init__.py
Depth-Anything-3-main/src/depth_anything_3/: __init__.py
hugging_face/: __init__.py
old/: .gitignore  ADVANCED_MATTING_ROADMAP.md  COMPATIBILITY_ANALYSIS.md  Cargo.toml  FIXES_AND_IMPROVEMENTS.md  INSTALLATION_RAPIDE.md  README.md  README_SAM3_DA3.md  ROADMAP_CLEAN.md  SPECIFICATIONS_COMPLETE.md  pyproject.toml  test_models.py  verify_code.py
old/configs/: default.yaml
old/examples/: professional_matting_example.py
old/src/ultimate_rotoscopy/: gui.py
old/src/ultimate_rotoscopy/acceleration/: __init__.py  caching.py  multi_gpu.py
old/src/ultimate_rotoscopy/color/: hdr.py
old/src/ultimate_rotoscopy/compositing/: compositor.py  edge_operations.py  light_wrap.py
old/src/ultimate_rotoscopy/core/: __init__.py
old/src/ultimate_rotoscopy/depth/: shadow_ao.py
old/src/ultimate_rotoscopy/export/: aov_manager.py  exr_writer.py
old/src/ultimate_rotoscopy/gui/: backend.py  modern_gui.py  modern_gui_tabs.py
old/src/ultimate_rotoscopy/matting/: __init__.py  motion_blur_aware.py  professional_matting.py
old/src/ultimate_rotoscopy/pipeline/: batch.py  video.py
old/src/ultimate_rotoscopy/plugins/: openfx.py
old/src/ultimate_rotoscopy/utils/: color.py
scripts/: download_models.py  install_rocky_linux.sh
src/: lib.rs
src/ultimate_rotoscopy/: __init__.py  cli.py  gui.py
src/ultimate_rotoscopy/acceleration/: onnx_tensorrt.py
src/ultimate_rotoscopy/cli/: __init__.py  roto_cli.py
src/ultimate_rotoscopy/color/: __init__.py  aces.py
src/ultimate_rotoscopy/compositing/: __init__.py  despill.py  harmonization.py
src/ultimate_rotoscopy/core/: __init__.py  engine.py  session.py  ultimate_pipeline.py
src/ultimate_rotoscopy/depth/: __init__.py
src/ultimate_rotoscopy/export/: __init__.py  flame_export.py
src/ultimate_rotoscopy/gui/: __init__.py  backend.py  main_window.py  modern_gui.py  modern_gui_tabs.py
src/ultimate_rotoscopy/matting/: alpha_split.py
src/ultimate_rotoscopy/models/: __init__.py  base.py  bgmattingv2.py  depth_anything.py  gvm.py  matanyone.py  matte_anything.py  omnimatte.py  raft.py  robust_sam.py  sam3.py  vitmatte.py
src/ultimate_rotoscopy/pipeline/: __init__.py  roto_pipeline.py  unified.py
src/ultimate_rotoscopy/plugins/: __init__.py
src/ultimate_rotoscopy/utils/: __init__.py  image.py
