[package]
name = "ultimate-rotoscopy-core"
version = "1.0.0"
edition = "2021"
authors = ["Ultimate Rotoscopy Team"]
description = "High-performance core for Ultimate Rotoscopy Application"
license = "MIT"
repository = "https://github.com/ultimate-rotoscopy/ultimate-rotoscopy"
keywords = ["rotoscopy", "vfx", "compositing", "image-processing"]
categories = ["multimedia::images", "graphics"]

[lib]
name = "rotoscopy_core"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "rotoscopy-cli"
path = "src/bin/cli.rs"

[dependencies]
# Image processing
image = { version = "0.24", features = ["png", "jpeg", "tiff", "exr"] }
imageproc = "0.23"
nalgebra = "0.32"
ndarray = { version = "0.15", features = ["rayon"] }

# Python bindings
pyo3 = { version = "0.20", features = ["extension-module", "abi3-py310"] }
numpy = "0.20"

# Parallel processing
rayon = "1.8"
crossbeam = "0.8"
tokio = { version = "1.34", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# CLI
clap = { version = "4.4", features = ["derive", "env"] }
indicatif = "0.17"
console = "0.15"

# Math and algorithms
num-traits = "0.2"
ordered-float = "4.2"
kiddo = "4.2"  # KD-tree for point clouds
petgraph = "0.6"  # Graph algorithms for edge detection

# EXR support
exr = "1.7"
half = "2.3"  # 16-bit floats for EXR

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
log = "0.4"
env_logger = "0.10"
tracing = "0.1"
tracing-subscriber = "0.3"

[dev-dependencies]
criterion = "0.5"
proptest = "1.4"
tempfile = "3.8"

[features]
default = ["python"]
python = []
cuda = []
opencl = []

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
strip = true

[[bench]]
name = "edge_detection"
harness = false

[[bench]]
name = "matte_refinement"
harness = false
